--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,16 @@
 name: ioc
-description: The most simple Ioc Container of Dart and Flutter
+description: The most simple IoC Container of Dart and Flutter
+
   If you looking for a package that is light-weight and provide production-ready of inversion of
   control, then this package is right for you.
+
   This package provides only 2 main api, easy to learn and use,  but definitely fits most use case in your flutter project.
+
   If you are a server developer developing small or medium scale project, it's very likely you want to use this package.
   However, large scale project may need more powerful heavy-weight IoC library.
+
   You **can** use it in your angular project, but we highly recommend you use dependency injection system provided by angular.
+
 version: 0.3.0
 homepage: https://github.com/copydog/ioc.dart
 author: copydog <775150@qq.com>
